# hyprpicker

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: nix-build.yaml
doc/: hyprpicker.1
nix/: default.nix  overlays.nix
src/: defines.hpp  hyprpicker.cpp  hyprpicker.hpp  includes.hpp  main.cpp
src/clipboard/: Clipboard.cpp  Clipboard.hpp
src/debug/: Log.cpp  Log.hpp
src/events/: Events.cpp  Events.hpp
src/helpers/: Color.cpp  Color.hpp  LayerSurface.cpp  LayerSurface.hpp  Monitor.cpp  Monitor.hpp  PoolBuffer.cpp  PoolBuffer.hpp
src/notify/: Notify.cpp  Notify.hpp
